# moyan-project

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_DISTRIBUTION.md  Dockerfile  FEATURE_CHECKLIST.md  QUICK_START_WINDOWS.md  README.md  README_DOCKER.md  README_WINDOWS_PACKAGE.md  README_old.md  WINDOWS_USER_GUIDE.md  build_docker.sh  deploy.sh  docker-compose-windows.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  start-windows.bat  start.bat  start.sh
docs/: CZSC_INTEGRATION_GUIDE.md  README.md  web_interface_guide.md
docs/developer_guide/: czsc_update_guide.md
docs/user_guide/: cli_reference.md  installation.md  quick_start.md
output/reports/: 000001_daily_czsc_report_20250929_162028.md  000001_daily_czsc_report_20250929_164716.md  000001_daily_czsc_report_20250929_164738.md  000001_daily_czsc_report_20251008_072405.md  001219_daily_czsc_report_20250929_165011.md  002129_daily_czsc_report_20250929_162129.md  002129_daily_czsc_report_20250929_162315.md  002129_daily_czsc_report_20250929_162334.md  002129_daily_czsc_report_20250929_162428.md  002167_czsc_report.md  002167_daily_czsc_report_20250929_141014.md  002167_daily_czsc_report_20250929_155014.md  002167_daily_czsc_report_20250929_155415.md  002167_daily_czsc_report_20250929_160518.md  002167_daily_czsc_report_20250929_160639.md  002167_daily_czsc_report_20250929_161128.md  002167_daily_czsc_report_20250929_161643.md  002167_daily_czsc_report_20250929_161927.md  002167_daily_czsc_report_20250929_162932.md  002167_daily_czsc_report_20250929_163531.md  002167_daily_czsc_report_20250929_163808.md  002167_daily_czsc_report_20250929_164623.md  002167_daily_czsc_report_20250929_165251.md  002167_daily_czsc_report_20250929_165703.md  002167_daily_czsc_report_20250929_165738.md  002167_daily_czsc_report_20250929_170434.md  002167_daily_czsc_report_20250929_171927.md  002167_daily_czsc_report_20251008_072921.md  300502_daily_czsc_report_20250929_152718.md  300502_daily_czsc_report_20250929_153540.md  300502_daily_czsc_report_20250929_154416.md  300502_daily_czsc_report_20250929_154511.md  300502_daily_czsc_report_20250929_154525.md  300502_daily_czsc_report_20250929_154537.md  300502_daily_czsc_report_20250929_154547.md  300502_daily_czsc_report_20250929_154611.md  300502_daily_czsc_report_20250929_154913.md  300502_daily_czsc_report_20250929_161911.md  (+5 more)
scripts/: check_czsc_updates.py  install.sh  pre-commit-check.sh  update_czsc.sh
src/moyan/: __init__.py
tests/: test_basic.py
(+27 files in other folders)
